syntax = "proto3";

package chat;
option go_package = "/chat";

enum ChatMessage_ChatType {
  WORLD = 0;
  GUILD = 1;
  PRIVATE = 2;
}

message LoginReq {
  string username = 1;
  string password = 2;
}

message ChatMessage {
  string sender_username = 1;
  string content = 2;
  ChatMessage_ChatType  chat_type = 3; // 1: World, 2: Guild, 3: Private
  string receiver_username = 4; // Only used for Private chat
}

message SystemMessage {
  string content = 1;
}
