syntax = "proto3";

package pb;
option go_package = "/request";
import "google/protobuf/timestamp.proto";

message Request {
  int32 msg_id = 1;  // Unique ID number for this person.
  string msg = 2;
  google.protobuf.Timestamp last_updated = 5;
}

// Our address book file is just one of these.
